# cookiecutter-py-subcli

./: README.md  cookiecutter.json
{{ cookiecutter.project_name }}/: .gitattributes  .gitignore  README.md  pyproject.toml
{{ cookiecutter.project_name }}/src/{{ cookiecutter.__underscored }}/: cli.py
{{ cookiecutter.project_name }}/tests/: test_dummy.py
